--- a/RandomMachineQuote/index.html
+++ b/RandomMachineQuote/index.html
@@ -9,6 +9,7 @@
     <title>Random Quote Machine</title>
 </head>
 <body class="background-color">
+    <div id="title">Random Quote Generator</div>
     <div id="quote-box">
         <p id="text" class="text-color">“Two things are infinite: the universe and human stupidity; and I'm not sure about the universe.”</p>
         <p id="author" class="text-color"><span>-</span> Albert Einstein</p>
